# localagent-desktop

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.gui  MCP_TOOLS_GUIDE.md  QUICK_START.md  README.md  backendinference.md  current_suggestions.md  current_suggestions2.md  designproblem.md  docker-compose.yml  er.name  futureplugin.md  guardrails_for_developing.md  historydevelopment.md  implementation-part1.md  implementation-part3.md  insert-qwen-token.js  knowledge.md  multitool developing.plan  oauthtests.py  package.json  pathissues.md  per-agent-tool-plan.md  preload.js  refactor-plan-max-1000-lines.md  seed-workflows.js  subagent-architecture.md  supermultiagentresearch  supermultiagentresearch.md  task.md  task2.md  tmp.txt  websearch.plan
agentin/: agent.md
agentin/plugins/http-tts-bridge/python_backend/: README.md  pyproject.toml  run.py
agentin/plugins/http-tts-bridge/python_backend/backend/: __init__.py  app.py  catalog.py  config.py  models.py  stability.py  state.py  tts_engine.py  voice_cloner.py  voice_preparer.py
agentin/plugins/http-tts-bridge/python_backend/backend/routers/: agent.py  system.py  voices.py
docker/: gui-start.sh  supervisord.conf
docs/: tts-plugin-contract.md
tests/: README.md  run-suite.js
tools/: check-skins.js  init-duplication-proof.md  prove-allow-once-bypass.js  prove-init-duplication.js  prove-set-tool-active.js  run-searxng-plugin-server.js  test-bootstrap-runtime.js  test-database-runtime.js  test-dispatcher-mocked.js  test-ipc-flow-mocked.js  (+13 more)
(+348 files in other folders)
