[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts-local"
version = "0.1.0"
description = "Local FastAPI and web UI wrapper for Qwen3 TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "soundfile>=0.12,<1.0",
  "librosa>=0.10,<1.0",
  "psutil>=5.9,<8.0",
  "python-multipart>=0.0.9,<1.0",
  "requests>=2.31,<3.0",
]

[project.optional-dependencies]
inference = [
  "torch>=2.2",
  "qwen-tts",
  "faster-qwen3-tts>=0.2.5",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
